@@ -8,6 +8,8 @@ djvusmooth (0.2.3) UNRELEASED; urgency=low
       http://bugs.debian.org/574338
     + Display real border width for instead of hard-coded 1.
     + Use the term “width” rather than “thickness” consistently.
+  * Document that using shadow border thinner than 3 pixels is not portable.
+    http://bugs.debian.org/574361
 
  -- Jakub Wilk <jwilk@jwilk.net>  Wed, 17 Mar 2010 18:11:30 +0100
 
